unpackaged/main/default/objects/litify_pm__Intake__c/litify_pm__Intake__c.object-meta.xml
<CustomObject>
    <label>Intake</label>
    <nameField>
        <displayFormat>INT-{YY}{MM}{DD}{0000}</displayFormat>
        <label>Intake Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intakes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>