unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_ext__Companion__c.field-meta.xml
<CustomField>
    <fullName>litify_ext__Companion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Companion</label>
    <referenceTo>litify_pm__Companion__c</referenceTo>
    <relationshipLabel>Intakes</relationshipLabel>
    <relationshipName>Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>