unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_mktgROI__Monthly_Marketing_Spend__c.field-meta.xml
<CustomField>
    <fullName>litify_mktgROI__Monthly_Marketing_Spend__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monthly Marketing Spend</label>
    <referenceTo>litify_mktgROI__Monthly_Marketing_Spend__c</referenceTo>
    <relationshipLabel>Intakes</relationshipLabel>
    <relationshipName>Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>