unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_mktgROI__Retainers_Sent__c.field-meta.xml
<CustomField>
    <fullName>litify_mktgROI__Retainers_Sent__c</fullName>
    <description>Returns the value of &#39;1&#39; if the intake has a retainer agreement sent date recorded.</description>
    <formula>IF(NOT(ISBLANK( litify_pm__Retainer_Agreement_Sent_Date__c )),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retainers Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>