unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_mktgROI__Sign_Ups__c.field-meta.xml
<CustomField>
    <fullName>litify_mktgROI__Sign_Ups__c</fullName>
    <formula>IF( 

TEXT(litify_pm__Status__c) = &quot;Converted&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sign Ups</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>