unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_mktgROI__Source_Match__c.field-meta.xml
<CustomField>
    <fullName>litify_mktgROI__Source_Match__c</fullName>
    <formula>TEXT(MONTH(DATEVALUE(CreatedDate))) +&quot; &quot;+ TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Match</label>
    <type>Text</type>
</CustomField>