unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__age_in_days__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__age_in_days__c</fullName>
    <description>Age in days</description>
    <formula>NOW() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Age in days since created</inlineHelpText>
    <label>Age (in days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>