unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Browser__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Browser__c</fullName>
    <label>Browser</label>
    <type>TextArea</type>
</CustomField>