unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Case_Address_2__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Case_Address_2__c</fullName>
    <label>Case Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>