unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Case_City__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Case_City__c</fullName>
    <label>Case City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>