unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Case_Quality__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Case_Quality__c</fullName>
    <formula>IF(	litify_pm__Case_Quality_Score__c &gt; 81, 
	IMAGE(&quot;/resource/litify_pm__case_quality_green_full&quot;, &quot;Green-Full&quot;), 
IF( litify_pm__Case_Quality_Score__c &gt; 61, 
	IMAGE(&quot;/resource/litify_pm__case_quality_green&quot;, &quot;Green&quot;), 
IF( litify_pm__Case_Quality_Score__c &gt; 41, 
	IMAGE(&quot;/resource/litify_pm__case_quality_yellow&quot;, &quot;Yellow&quot;), 
IF( litify_pm__Case_Quality_Score__c &gt; 21, 
	IMAGE(&quot;/resource/litify_pm__case_quality_red&quot;, &quot;Red&quot;), 
IF( litify_pm__Case_Quality_Score__c &gt; 0,
	IMAGE(&quot;/resource/litify_pm__case_quality_red_low&quot;, &quot;Red&quot;),
	&quot;n/a&quot;
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Quality</label>
    <type>Text</type>
</CustomField>