unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Case_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Case_Quality_Score__c</fullName>
    <label>Case Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>