unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Client__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Id</field>
            <operation>notEqual</operation>
            <value />
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intakes as Client</relationshipLabel>
    <relationshipName>Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>