unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Created_to_Signed_Up__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Created_to_Signed_Up__c</fullName>
    <formula>IF(NOT(ISBLANK( litify_pm__Converted_Date__c )), litify_pm__Converted_Date__c-CreatedDate, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created to Signed Up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>