unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Created_to_Turned_Down__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Created_to_Turned_Down__c</fullName>
    <formula>IF(NOT(ISBLANK(litify_pm__Turned_Down_Date__c)),  litify_pm__Turned_Down_Date__c-  CreatedDate, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created to Turned Down</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>