unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Device_Type2__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Device_Type2__c</fullName>
    <label>Device Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>