unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Device_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Device_Type__c</fullName>
    <description>This Field is Deprecated use the new version</description>
    <label>Device Type (DEPRECATED)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>