unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Display_Name__c</fullName>
    <externalId>true</externalId>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>