unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Incident_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Incident_Date__c</fullName>
    <label>Incident Date</label>
    <type>Date</type>
</CustomField>