unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Intake_Assigned_to_Current_User__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Intake_Assigned_to_Current_User__c</fullName>
    <label>Intake Assigned to Current User</label>
    <type>DateTime</type>
</CustomField>