unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Intakes__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Intakes__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intakes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>