unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__IsConverted__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__IsConverted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsConverted</label>
    <type>Checkbox</type>
</CustomField>