unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Matter_Owner__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>