unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Minutes_from_Retainer_Sent_to_Signed__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Minutes_from_Retainer_Sent_to_Signed__c</fullName>
    <formula>IF(ISBLANK(litify_pm__Retainer_Agreement_Signed__c), null,
(litify_pm__Retainer_Agreement_Signed__c-litify_pm__Retainer_Agreement_Sent_Date__c)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutes from Retainer Sent to Signed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>