unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Minutes_from_Signed_to_Matter_Open__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Minutes_from_Signed_to_Matter_Open__c</fullName>
    <formula>IF(ISBLANK(litify_pm__Converted_Date__c), null, 
(litify_pm__Converted_Date__c- litify_pm__Retainer_Agreement_Signed__c)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutes from Signed to Matter Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>