unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Minutes_from_Under_Review_to_Retainer__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Minutes_from_Under_Review_to_Retainer__c</fullName>
    <formula>IF(ISBLANK(litify_pm__Retainer_Agreement_Sent_Date__c), null, 
(litify_pm__Retainer_Agreement_Sent_Date__c-litify_pm__Under_Review_Date__c)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutes from Under Review to Retainer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>