unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Minutes_to_Close__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Minutes_to_Close__c</fullName>
    <formula>IF(
TEXT(litify_pm__Status__c) = &quot;Referred Out&quot;,

(litify_pm__Referred_Out_Date__c - litify_pm__Open_Date__c)*24*60,

IF(
TEXT(litify_pm__Status__c) = &quot;Turned Down&quot;,

(litify_pm__Turned_Down_Date__c - litify_pm__Open_Date__c)*24*60,


IF(
TEXT(litify_pm__Status__c) = &quot;Converted&quot;,

(litify_pm__Converted_Date__c  - litify_pm__Open_Date__c)*24*60,

null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutes to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>