unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Minutes_to_Complete_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Minutes_to_Complete_Questionnaire__c</fullName>
    <formula>IF(
ISBLANK(litify_pm__Questionnaire_End_Date__c), null,

 (litify_pm__Questionnaire_End_Date__c-litify_pm__Questionnaire_Start_Date__c)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutes to Complete Questionnaire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>