unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Phone__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>