unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Phone_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Phone_Area_Code__c</fullName>
    <formula>left(SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( litify_pm__Phone__c , &quot;1- &quot;, &quot;&quot;) , &quot;+1 &quot;, &quot;&quot;) , &quot;+1&quot;, &quot;&quot;) , &quot;1 (&quot;, &quot;&quot;) , &quot;1(&quot;, &quot;&quot;) , &quot;(&quot;, &quot;&quot;),3)</formula>
    <label>Phone Area Code</label>
    <type>Text</type>
</CustomField>