unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Questionnaire_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Questionnaire_Last_Modified__c</fullName>
    <label>Questionnaire Last Modified</label>
    <type>DateTime</type>
</CustomField>