unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Questionnaire_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Questionnaire_Start_Date__c</fullName>
    <label>Questionnaire Start Date</label>
    <type>DateTime</type>
</CustomField>