unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Questions_and_answers__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Questions_and_answers__c</fullName>
    <description>Textual representation of Questionnaires. Note: this field is not intended to be added to a layout as it can take some time to update! Rather, it is useful for e.g. workflows that send emails with all questionnaire answers.</description>
    <label>Questionnaire Output</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>