unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Referral__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Original Referral</description>
    <inlineHelpText>Original Referral</inlineHelpText>
    <label>Referral</label>
    <referenceTo>litify_pm__Referral__c</referenceTo>
    <relationshipLabel>Converted Intakes</relationshipLabel>
    <relationshipName>Converted_Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>