unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Referred_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Referred_Out_Date__c</fullName>
    <label>Referred Out Date</label>
    <type>DateTime</type>
</CustomField>