unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Retainer_Agreement_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Retainer_Agreement_Sent_Date__c</fullName>
    <label>Retainer Agreement Sent Date</label>
    <type>DateTime</type>
</CustomField>