unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Retainer_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Retainer_Agreement_Signed__c</fullName>
    <label>Retainer Agreement Signed</label>
    <type>DateTime</type>
</CustomField>