unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Search_Engine__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Search_Engine__c</fullName>
    <label>Search Engine</label>
    <type>TextArea</type>
</CustomField>