unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Sign_Up_Method__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Sign_Up_Method__c</fullName>
    <label>Sign Up Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>E-signature</fullName>
            </value>
            <value>
                <fullName>Mail out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>