unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Source__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source</description>
    <label>Source</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>litify_pm__Source__c.RecordType.Name</field>
            <operation>equals</operation>
            <valueField>$Source.litify_pm__Source_Type__c</valueField>
        </filterItems>
        <infoMessage>You can only associate Sources of the specified Source Type. Search results only display Sources of the declared type</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>litify_pm__Source__c</referenceTo>
    <relationshipLabel>Intakes</relationshipLabel>
    <relationshipName>Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>