unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Status__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Retainer Agreement Sent</fullName>
            </value>
            <value>
                <fullName>Retainer Agreement Signed</fullName>
            </value>
            <value>
                <fullName>Turned Down</fullName>
            </value>
            <value>
                <fullName>Referred Out</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>