unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Statute_of_Limitations_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Statute_of_Limitations_Date__c</fullName>
    <label>Statute of Limitations Date</label>
    <type>Date</type>
</CustomField>