unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Total_Emails__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Total_Emails__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>