unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Turn_Down_Details__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Turn_Down_Details__c</fullName>
    <label>Turn Down Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>