unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__Turn_Down_Reason__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Turn_Down_Reason__c</fullName>
    <label>Turn Down Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>litify_pm__Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Already represented</fullName>
            </value>
            <value>
                <fullName>Case already settled</fullName>
            </value>
            <value>
                <fullName>Client unresponsive</fullName>
            </value>
            <value>
                <fullName>Conflict with one or more parties</fullName>
            </value>
            <value>
                <fullName>Decided to use other firm</fullName>
            </value>
            <value>
                <fullName>Insufficient coverage</fullName>
            </value>
            <value>
                <fullName>Insufficient damages</fullName>
            </value>
            <value>
                <fullName>Limited/No injury</fullName>
            </value>
            <value>
                <fullName>Limited/No treatment</fullName>
            </value>
            <value>
                <fullName>No defect</fullName>
            </value>
            <value>
                <fullName>Questionable/No liability</fullName>
            </value>
            <value>
                <fullName>SOL expired</fullName>
            </value>
            <value>
                <fullName>Wrong location</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>