unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__UTM_Campaign__c</fullName>
    <description>Identify a strategic campaign (e.g. product launch, new feature, partnership, etc.) or specific promotion (e.g. a sale, a giveaway, etc.)</description>
    <inlineHelpText>Identify a strategic campaign (e.g. product launch, new feature, partnership, etc.) or specific promotion (e.g. a sale, a giveaway, etc.)</inlineHelpText>
    <label>UTM Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>