unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__UTM_Content__c</fullName>
    <description>Suggested for additional details for A/B testing and content-targeted ads.</description>
    <inlineHelpText>Suggested for additional details for A/B testing and content-targeted ads.</inlineHelpText>
    <label>UTM Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>