unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__UTM_Medium__c</fullName>
    <description>Identify the medium the link was used on such as: email, CPC, or other method of sharing.</description>
    <inlineHelpText>Identify the medium the link was used on such as: email, CPC, or other method of sharing.</inlineHelpText>
    <label>UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>