unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__UTM_Source__c</fullName>
    <description>Identify the source of your traffic such as: search engine, newsletter, or other referral.</description>
    <inlineHelpText>Identify the source of your traffic such as: search engine, newsletter, or other referral.</inlineHelpText>
    <label>UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>