unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_pm__UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__UTM_Term__c</fullName>
    <description>Suggested for paid search to identify keywords for your ad.</description>
    <inlineHelpText>Suggested for paid search to identify keywords for your ad.</inlineHelpText>
    <label>UTM Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>