unpackaged/main/default/objects/litify_pm__Intake__c/fields/litify_tso_My_Intake__c.field-meta.xml
<CustomField>
    <fullName>litify_tso_My_Intake__c</fullName>
    <description>Set to True if the Logged in User is the same as the Intake Owner. Additional user lookups can be added as needed.</description>
    <formula>IF(OwnerId = $User.Id, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set to True if the Logged in User is the same as the Intake Owner. Additional user lookups can be added as needed.</inlineHelpText>
    <label>My Intake</label>
    <type>Checkbox</type>
</CustomField>